[project]
name = "agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "httpx[socks]>=0.28.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.4",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.2",
]
